// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not match the pattern 1`] = `
<Valle(Input)
  matches={/abc/i}
  onInvalid={[Function]}
>
  <Input
    message="Hi does not match the pattern /abc/i. Please check your value and try again."
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        Hi does not match the pattern /abc/i. Please check your value and try again.
      </div>
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input is empty 1`] = `
<Valle(Input)
  matches={/abc/i}
  onValid={[Function]}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input matches the pattern 1`] = `
<Valle(Input)
  matches={/abc/i}
  onValid={[Function]}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;
